namespaces/vui/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"vui:vui-api-clusterip-svc","ingressName":"vui:vui-ingress","hostname":"vui.35.241.255.137.nip.io","path":"/api","allNodes":false},{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"vui:vui-api-clusterip-svc","ingressName":"vui:vui-ingress","hostname":"vui.35.241.255.137.nip.io","path":"/ws","allNodes":false}]'
    meta.helm.sh/release-name: vui
    meta.helm.sh/release-namespace: vui
  labels:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vui
    app.kubernetes.io/version: 0.4.1
    component: api
    helm.sh/chart: vui-1.0.6
  name: vui-api-deploy
  namespace: vui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: vui
      app.kubernetes.io/name: vui
      component: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-04-17T17:40:26Z'
      labels:
        app.kubernetes.io/instance: vui
        app.kubernetes.io/name: vui
        component: api
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/dserio83/velero-api:0.3.1
        imagePullPolicy: IfNotPresent
        name: api-server
        ports:
        - containerPort: 8001
          name: api
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: vui-admin-sa
      serviceAccountName: vui-admin-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"vui:vui-ui-clusterip-svc","ingressName":"vui:vui-ingress","hostname":"vui.35.241.255.137.nip.io","path":"/","allNodes":false}]'
    meta.helm.sh/release-name: vui
    meta.helm.sh/release-namespace: vui
  labels:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vui
    app.kubernetes.io/version: 0.4.1
    component: ui
    helm.sh/chart: vui-1.0.6
  name: vui-ui-deploy
  namespace: vui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: vui
      app.kubernetes.io/name: vui
      component: ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-04-17T17:40:26Z'
      labels:
        app.kubernetes.io/instance: vui
        app.kubernetes.io/name: vui
        component: ui
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/dserio83/velero-ui:0.3.1
        imagePullPolicy: IfNotPresent
        name: webserver
        ports:
        - containerPort: 3000
          name: run
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    meta.helm.sh/release-name: vui
    meta.helm.sh/release-namespace: vui
  labels:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vui
    app.kubernetes.io/version: 0.4.1
    component: watchdog
    helm.sh/chart: vui-1.0.6
  name: vui-watchdog-deploy
  namespace: vui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: vui
      app.kubernetes.io/name: vui
      component: watchdog
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: vui
        app.kubernetes.io/name: vui
        component: watchdog
    spec:
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: docker.io/dserio83/velero-watchdog:0.1.8
        imagePullPolicy: IfNotPresent
        name: velero-monitoring
        ports:
        - containerPort: 8001
          name: api
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: vui-readonly-sa
      serviceAccountName: vui-readonly-sa
      terminationGracePeriodSeconds: 30
