namespaces/vui/services.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: vui
    meta.helm.sh/release-namespace: vui
  labels:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vui
    app.kubernetes.io/version: 0.4.1
    helm.sh/chart: vui-1.0.6
  name: vui-api-clusterip-svc
  namespace: vui
spec:
  clusterIP: 10.101.14.231
  clusterIPs:
  - 10.101.14.231
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: vui-api
    port: 80
    protocol: TCP
    targetPort: api
  selector:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/name: vui
    component: api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: vui
    meta.helm.sh/release-namespace: vui
  labels:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vui
    app.kubernetes.io/version: 0.4.1
    helm.sh/chart: vui-1.0.6
  name: vui-ui-clusterip-svc
  namespace: vui
spec:
  clusterIP: 10.103.69.123
  clusterIPs:
  - 10.103.69.123
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: vui-ui
    port: 80
    protocol: TCP
    targetPort: run
  selector:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/name: vui
    component: ui
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: vui
    meta.helm.sh/release-namespace: vui
  labels:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vui
    app.kubernetes.io/version: 0.4.1
    helm.sh/chart: vui-1.0.6
  name: vui-watchdog-clusterip-svc
  namespace: vui
spec:
  clusterIP: 10.102.97.122
  clusterIPs:
  - 10.102.97.122
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: watchdog-api
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app.kubernetes.io/instance: vui
    app.kubernetes.io/name: vui
    component: watchdog
  sessionAffinity: None
  type: ClusterIP
